--- a/index.html
+++ b/index.html
@@ -11,86 +11,89 @@
 
 <body>
   <!-- Navigation Bar -->
-  <nav class="flex justify-between px-[50px] py-[16px]">
-    <img src="/logo.svg" alt="ReviewSync Logo" />
+  <nav class="flex justify-between items-center px-4 sm:px-[50px] py-4 sm:py-[16px]">
+    <img src="/logo.svg" alt="ReviewSync Logo" class="w-32 sm:w-auto" />
     <button
-      class="cursor-pointer flex items-center justify-center rounded-xl bg-gradient-to-r from-[#7348FF] to-[#4E2AC3] text-white font-bold shadow-lg hover:from-[#5c36cc] hover:to-[#3b1e99] transition px-[20px] py-4">
+      class="cursor-pointer flex items-center justify-center rounded-xl bg-gradient-to-r from-[#7348FF] to-[#4E2AC3] text-white font-bold shadow-lg hover:from-[#5c36cc] hover:to-[#3b1e99] transition px-4 sm:px-[20px] py-3 sm:py-4 text-sm sm:text-base">
       Join Waitlist
     </button>
   </nav>
 
   <!-- Hero Section -->
-  <header class="flex justify-center items-center mt-[30px]">
-    <div class="max-w-[1015px] flex flex-col gap-[40px] justify-center">
+  <header class="flex justify-center items-center mt-6 sm:mt-[30px] px-4 sm:px-0">
+    <div class="max-w-[1015px] flex flex-col gap-6 sm:gap-[40px] justify-center">
       <!-- Promotion Banner -->
-      <p class="bg-[#FFEEC2] text-[#FF8800] font-medium text-lg rounded-[14.5px] w-fit mx-auto px-4 py-2">
+      <p
+        class="bg-[#FFEEC2] text-[#FF8800] font-medium text-sm sm:text-lg rounded-[14.5px] w-fit mx-auto px-3 sm:px-4 py-1.5 sm:py-2">
         30% Discount for the early birds!
       </p>
 
       <!-- Hero Content -->
       <h3
-        class="flex items-center justify-center text-[#333333] font-sans font-bold text-[56px] leading-[68.32px] tracking-[-1.1%] text-center">
+        class="flex items-center justify-center text-[#333333] font-sans font-bold text-3xl sm:text-[56px] leading-tight sm:leading-[68.32px] tracking-[-1.1%] text-center">
         Turn your happy customers into more sales
       </h3>
       <p
-        class="flex items-center justify-center text-[#969598] font-sans font-medium text-[20px] leading-[23.87px] tracking-[0%] text-center">
+        class="flex items-center justify-center text-[#969598] font-sans font-medium text-base sm:text-[20px] leading-snug sm:leading-[23.87px] tracking-[0%] text-center px-4 sm:px-0">
         Show off your best reviews in seconds! Build trust, attract more
         buyers, and grow your sales without breaking a sweat.
       </p>
 
       <!-- CTA Button -->
       <button
-        class="cursor-pointer flex items-center justify-center rounded-xl bg-gradient-to-r from-[#7348FF] to-[#4E2AC3] text-white font-bold shadow-lg hover:from-[#5c36cc] hover:to-[#3b1e99] transition p-[20px] w-fit mx-auto">
+        class="cursor-pointer flex items-center justify-center rounded-xl bg-gradient-to-r from-[#7348FF] to-[#4E2AC3] text-white font-bold shadow-lg hover:from-[#5c36cc] hover:to-[#3b1e99] transition p-4 sm:p-[20px] w-fit mx-auto text-sm sm:text-base">
         Join waitlist - for free
       </button>
     </div>
   </header>
 
   <!-- Features Section -->
-  <section class="mt-[200px] min-h-[1000px] relative pb-[136px]" style="background-image: url('/bg_section_1.svg')">
+  <section class="mt-[150px] sm:mt-[200px] min-h-[800px] sm:min-h-[1000px] relative pb-[80px] sm:pb-[136px]"
+    style="background-image: url('/bg_section_1.svg')">
     <!-- Featured Review Card -->
-    <div class="absolute left-0 right-0 -top-[140px]">
-      <div class="w-[428px] mx-auto p-[32px] bg-white shadow-lg rounded-xl">
+    <div class="absolute left-0 right-0 -top-[140px] px-4 sm:px-0">
+      <div class="w-full sm:w-[428px] mx-auto p-4 sm:p-[32px] bg-white shadow-lg rounded-xl">
         <!-- User Info -->
         <div class="flex items-center space-x-3">
-          <img src="/face1.svg" alt="User Avatar" class="w-[60px] h-[60px] rounded-[12px]" />
-          <h2 class="text-[24px] font-semibold">Oussama Mekhaldi</h2>
+          <img src="/face1.svg" alt="User Avatar" class="w-12 h-12 sm:w-[60px] sm:h-[60px] rounded-[12px]" />
+          <h2 class="text-xl sm:text-[24px] font-semibold">Oussama Mekhaldi</h2>
         </div>
 
         <!-- Review Text -->
-        <p class="text-[#969598] text-[16px] my-[32px] font-semibold">
-          ReviewSync made my life so much easier! In just a week, I gained the
-          social proof I needed to close more deals. Highly recommend!
+        <p class="text-[#969598] text-sm sm:text-[16px] my-4 sm:my-[32px] font-semibold">
+          ReviewSync made my life so much easier! In just a week, I gained the social proof I needed to close more
+          deals. Highly recommend!
         </p>
 
         <!-- Review Video -->
         <div class="mt-3 relative">
-          <img src="/card1Bg.png" alt="Video Thumbnail" class="rounded-lg" />
+          <img src="/card1Bg.png" alt="Video Thumbnail" class="rounded-lg w-full" />
           <div class="absolute inset-0 flex items-center justify-center">
             <button class="bg-white p-2 rounded-full shadow-md">
-              <img src="/play-button.svg" alt="Play Video" class="w-6 h-6" />
+              <img src="/play-button.svg" alt="Play Video" class="w-5 h-5 sm:w-6 sm:h-6" />
             </button>
           </div>
         </div>
 
         <!-- Brand Logo -->
         <div class="mt-3 flex justify-center">
-          <img src="/brand-logo.svg" alt="Brand Logo" width="51" height="51" />
+          <img src="/brand-logo.svg" alt="Brand Logo" class="w-10 h-10 sm:w-[51px] sm:h-[51px]" />
         </div>
       </div>
     </div>
 
     <!-- Feature Content -->
-    <div class="pt-[475px]">
+    <div class="pt-[400px] sm:pt-[475px] px-4 sm:px-0">
       <!-- Feature 1: Collect Testimonials -->
       <div class="text-center">
         <span
-          class="mb-[34px] text-[24px] font-medium leading-[28.64px] tracking-normal text-[#AF5A98] text-center">First</span>
-        <h3 class="text-[56px] font-bold leading-[66.83px] tracking-tight text-[#202A46] text-center">
+          class="mb-4 sm:mb-[34px] text-lg sm:text-[24px] font-medium leading-snug sm:leading-[28.64px] tracking-normal text-[#AF5A98] text-center">First</span>
+        <h3
+          class="text-3xl sm:text-[56px] font-bold leading-tight sm:leading-[66.83px] tracking-tight text-[#202A46] text-center">
           Collect testimonials effortlessly
         </h3>
       </div>
-      <div class="max-w-[1200px] mx-auto relative mt-[80px] py-[287px] bg-white rounded-[40px]">
+      <div class="max-w-[1200px] mx-auto relative mt-8 sm:mt-[80px] py-[150px] sm:py-[287px] bg-white rounded-[40px]">
         <video class="w-full h-full absolute inset-0 object-cover rounded-[40px]" autoplay loop muted playsinline>
           <source src="/vid1.mp4" type="video/mp4" />
           Your browser does not support the video tag.
@@ -98,15 +101,17 @@
       </div>
 
       <!-- Feature 2: Share Testimonials -->
-      <div class="my-[80px] text-center">
-        <span class="mb-[34px] text-[24px] font-medium leading-[28.64px] text-center text-[#7348A4]">
+      <div class="my-8 sm:my-[80px] text-center">
+        <span
+          class="mb-4 sm:mb-[34px] text-lg sm:text-[24px] font-medium leading-snug sm:leading-[28.64px] text-center text-[#7348A4]">
           Sec... oh you are ready no extra steps needed!
         </span>
-        <h3 class="text-[56px] font-bold leading-[66.83px] tracking-[-1.1%] text-center text-[#202A46]">
+        <h3
+          class="text-3xl sm:text-[56px] font-bold leading-tight sm:leading-[66.83px] tracking-[-1.1%] text-center text-[#202A46]">
           Create & share testimonials
         </h3>
       </div>
-      <div class="max-w-[1200px] mx-auto relative mt-[80px] py-[287px] bg-white rounded-[40px]">
+      <div class="max-w-[1200px] mx-auto relative mt-8 sm:mt-[80px] py-[150px] sm:py-[287px] bg-white rounded-[40px]">
         <video class="w-full h-full absolute inset-0 object-cover rounded-[40px]" autoplay loop muted playsinline>
           <source src="/vid2.mp4" type="video/mp4" />
           Your browser does not support the video tag.
@@ -117,10 +122,10 @@
 
   <!-- Testimonials Carousel Section -->
   <section id="testimonial-section"
-    class="mt-[100px] max-w-[1200px] mx-auto flex gap-[28px] overflow-hidden relative h-[500px]">
-    <div class="testimonial-column flex flex-col gap-[28px] w-1/3"></div>
-    <div class="testimonial-column flex flex-col gap-[28px] w-1/3"></div>
-    <div class="testimonial-column flex flex-col gap-[28px] w-1/3"></div>
+    class="mt-12 sm:mt-[100px] max-w-[1200px] mx-auto flex gap-4 sm:gap-[28px] overflow-hidden relative h-[400px] sm:h-[500px] px-4 sm:px-0">
+    <div class="testimonial-column flex flex-col gap-4 sm:gap-[28px] w-full sm:w-1/3"></div>
+    <div class="testimonial-column hidden sm:flex flex-col gap-[28px] w-1/3"></div>
+    <div class="testimonial-column hidden sm:flex flex-col gap-[28px] w-1/3"></div>
 
     <!-- Gradient Overlays -->
     <div class="absolute top-0 left-0 w-full h-20 bg-gradient-to-b from-white to-transparent pointer-events-none"></div>
@@ -129,18 +134,19 @@
   </section>
 
   <!-- Footer -->
-  <footer class="bg-white p-[120px]">
-    <div class="max-w-7xl mx-auto px-6 lg:px-8">
+  <footer class="bg-white p-8 sm:p-[120px]">
+    <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
       <!-- Legal Links and Copyright -->
-      <div class="border-t mt-8 pt-6 flex flex-col md:flex-row justify-between text-sm text-[#596780]">
-        <div class="flex space-x-4">
+      <div
+        class="border-t mt-8 pt-6 flex flex-col md:flex-row justify-between text-xs sm:text-sm text-[#596780] space-y-4 md:space-y-0">
+        <div class="flex flex-wrap gap-4 justify-center md:justify-start">
           <a href="#" class="hover:text-gray-900">Privacy Policy</a>
-          <span>|</span>
+          <span class="hidden sm:inline">|</span>
           <a href="#" class="hover:text-gray-900">Terms & Conditions</a>
-          <span>|</span>
+          <span class="hidden sm:inline">|</span>
           <a href="#" class="hover:text-gray-900">Cookie Policy</a>
         </div>
-        <p class="mt-4 md:mt-0">&copy; ReviewSync 2025</p>
+        <p class="text-center md:text-right">&copy; ReviewSync 2025</p>
       </div>
     </div>
   </footer>
@@ -149,10 +155,8 @@
   <script src="/src/main.ts"></script>
   <script>
     document.addEventListener("DOMContentLoaded", function () {
-      const testimonialCarouselHTML =
-        createTestimonialCarousel(testimonialData);
-      document.getElementById("testimonial-section").innerHTML =
-        testimonialCarouselHTML;
+      const testimonialCarouselHTML = createTestimonialCarousel(testimonialData);
+      document.getElementById("testimonial-section").innerHTML = testimonialCarouselHTML;
     });
   </script>
 </body>
